[package]
name = "pallet-acuity-orderbook"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", optional = true, default-features = false, features = ["derive"] }
impl-serde = { version = "0.3.2", optional = true, default-features = false }
sp-std = { version = "13.0.0", default-features = false }
sp-runtime = { version = "30.0.1", default-features = false }
frame-support = { version = "27.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
frame-system = { version = "27.0.0", default-features = false }
frame-benchmarking = { version = "27.0.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-runtime/std",
	"sp-std/std",
	"serde/std",
	"impl-serde/std"
]
try-runtime = []

[dev-dependencies]
sp-core = "27.0.0"
sp-io = "29.0.0"
